[package]
name = "coremidi"
version = "0.7.0"
authors = ["Christian Perez-Llamas"]
description = "CoreMIDI library for Rust"
license = "MIT"
homepage = "https://github.com/chris-zen/coremidi"
repository = "https://github.com/chris-zen/coremidi"
documentation = "https://chris-zen.github.io/coremidi/coremidi/"
readme = "README.md"
keywords = ["CoreMIDI", "MIDI", "OSX", "macOS", "music"]
edition = "2021"


[dependencies]
core-foundation-sys = "0.8.3"
core-foundation = "0.9.3"
#coremidi-sys = "3.1.0"
coremidi-sys = { git = "https://github.com/chris-zen/coremidi-sys.git" }
