[package]
name = "coremidi"
version = "0.8.1"
authors = ["Christian Perez-Llamas"]
description = "CoreMIDI library for Rust"
license = "MIT"
homepage = "https://github.com/chris-zen/coremidi"
repository = "https://github.com/chris-zen/coremidi"
documentation = "https://chris-zen.github.io/coremidi/coremidi/"
readme = "README.md"
keywords = ["CoreMIDI", "MIDI", "OSX", "macOS", "music"]
edition = "2021"


[dependencies]
block = "0.1.6"
core-foundation-sys = "0.8.6"
core-foundation = "0.9.4"
coremidi-sys = "3.1.1"
